Children for content editable

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
     <input style="width: 100px" />
     <br />
     <br />
-    <div style="font-size: 16px" contenteditable="plaintext-only">Hello</div>
+    <div style="font-size: 16px" contenteditable="plaintext-only">
+      Hello
+      <p>here's some children</p>
+      <div>and some more</div>
+    </div>
     <br />
     <br />
     <br />
